--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "imap": "^0.8.19",
+    "@types/imap": "^0.8.40",
+    "@nestjs/config": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
