mock-services done

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ EMAIL_SUBJECT=Transaction Alert
 
 # Telegram Bot Configuration
 BOT_TOKEN=your_bot_token_here 
+
+# Server Configuration
+SERVER_PORT=3000
+
+# Mock Services Configuration
+MOCK_SERVICES_PORT=3001
