--- a/server/.env.example
+++ b/server/.env.example
@@ -8,3 +8,5 @@ IMAP_TLS=true
 # Email Filter Configuration
 EMAIL_FROM=visa@notifications.visa.com
 EMAIL_SUBJECT=Transaction Alert 
+
+SERVER_PORT=3000 
