--- a/mock-services/package.json
+++ b/mock-services/package.json
@@ -16,9 +16,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "imapflow": "^1.0.144",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/config": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
