--- a/server/package.json
+++ b/server/package.json
@@ -19,31 +19,32 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "imap": "^0.8.19",
     "@types/imap": "^0.8.40",
-    "@nestjs/config": "^3.1.1"
+    "axios": "^1.8.4",
+    "imap": "^0.8.19",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.1.3",
-    "@nestjs/testing": "^10.0.0",
     "jest": "^29.5.0",
-    "@types/jest": "^29.5.0",
+    "prettier": "^3.0.0",
     "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.12",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
