--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,14 @@
 FROM node:20-alpine
 
+ARG SERVER_PORT
+RUN test -n "${SERVER_PORT}" || (echo "PORT not set" && false)
+
+RUN apk --no-cache --update add dumb-init curl \
+  && rm -rf /var/cache/apk/*
+
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
+RUN chmod +x /wait
+
 WORKDIR /app
 
 # Copy package files
@@ -15,7 +24,7 @@ COPY . .
 RUN npm run build
 
 # Expose port
-EXPOSE 3000
+EXPOSE ${SERVER_PORT}
 
 # Start the application
 CMD ["npm", "run", "start"] 
