fixing docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     build:
       context: ./bot
       dockerfile: Dockerfile
+    command: sh -c "cd /app && npm run watch"
     environment:
       - NODE_ENV=development
       - BOT_TOKEN=${BOT_TOKEN}
