--- a/bot/package.json
+++ b/bot/package.json
@@ -11,16 +11,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "telegraf": "^4.15.3",
-    "dotenv": "^16.4.5"
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.5",
+    "telegraf": "^4.15.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
     "@types/jest": "^29.5.12",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.1.0",
+    "@types/node": "^20.11.24",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "nodemon": "^3.1.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
-} 
+}
