--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@types/imap": "^0.8.40",
     "axios": "^1.8.4",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "imap": "^0.8.19",
+    "mongoose": "^8.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -34,6 +38,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
