--- a/bot/package.json
+++ b/bot/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.4.5",
-    "telegraf": "^4.15.3"
+    "telegraf": "^4.15.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
