--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,16 +42,15 @@ services:
     command: sh -c "/wait && cd /app/server && npx ts-node-dev -r tsconfig-paths/register --inspect=0.0.0.0:1339 -P ./tsconfig.json src/main.ts"
     environment:
       - SERVER_PORT=3000
-      - NODE_ENV=development
-      - IMAP_HOST=http://mock-services
-      - IMAP_PORT=1143
-      - IMAP_USER=test@example.com
-      - IMAP_PASSWORD=test123
-      - IMAP_TLS=false
+      - NODE_ENV=production
+      - MOCKSERVER_HOST=http://mock-services
+      - MOCKSERVER_PORT=3001
       - EMAIL_FROM=${EMAIL_FROM}
       - EMAIL_SUBJECT=${EMAIL_SUBJECT}
-      - MOCKSERVER_PORT=3001
       - MONGODB_URI=mongodb://mongodb:27017/control-yourself
+      - GOOGLE_CLIENT_ID
+      - GOOGLE_CLIENT_SECRET
+      - GOOGLE_REDIRECT_URI
     ports:
       - "${SERVER_PORT:-3000}:3000"
       - '1339:1339'
