--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "NODE_OPTIONS='--max-old-space-size=4096' nest start --watch",
+    "start:debug": "NODE_OPTIONS='--max-old-space-size=4096' nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "@types/imap": "^0.8.40",
     "axios": "^1.8.4",
     "google-auth-library": "^9.15.1",
