--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,7 @@
     "start:debug": "NODE_OPTIONS='--max-old-space-size=4096' nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "test": "jest",
-    "test:e2e": "jest --config ./test/jest.config.ts --detectOpenHandles"
+    "test": "jest --config ./test/jest.config.ts --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
