--- a/server/package.json
+++ b/server/package.json
@@ -7,22 +7,23 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "NODE_OPTIONS='--max-old-space-size=4096' nest start --watch",
+    "start:debug": "NODE_OPTIONS='--max-old-space-size=4096' nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "test": "jest",
-    "test:e2e": "jest --config ./test/jest.config.ts --detectOpenHandles"
+    "test": "jest --config ./test/jest.config.ts --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jnscas/cy":  "file:.",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "@types/imap": "^0.8.40",
     "axios": "^1.8.4",
     "google-auth-library": "^9.15.1",
