--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@jnscas/cy":  "file:.",
+    "@jnscas/cy": "file:.",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -26,6 +26,8 @@
     "@nestjs/schedule": "^4.0.0",
     "@types/imap": "^0.8.40",
     "axios": "^1.8.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "imap": "^0.8.19",
