--- a/server/package.json
+++ b/server/package.json
@@ -18,27 +18,25 @@
   "license": "ISC",
   "dependencies": {
     "@jnscas/cy": "file:.",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/mongoose": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/schedule": "^4.0.0",
-    "@types/imap": "^0.8.40",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.0",
+    "@nestjs/platform-fastify": "^11.0.17",
+    "@nestjs/schedule": "^5.0.0",
     "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "imap": "^0.8.19",
     "mongoose": "^8.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^11.0.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/mongoose": "^5.11.97",
