--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2"
+  },
+  "lint-staged": {
+    "*.{js,cjs,ts}": "eslint --cache --fix",
+    "*.{css,md}": "prettier --write"
   }
 }
