--- a/server/package.json
+++ b/server/package.json
@@ -5,48 +5,41 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "NODE_OPTIONS='--max-old-space-size=4096' nest start --watch",
     "start:debug": "NODE_OPTIONS='--max-old-space-size=4096' nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest --config ./test/jest.config.ts --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@jnscas/cy":  "file:.",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/mongoose": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/schedule": "^4.0.0",
-    "@types/imap": "^0.8.40",
+    "@jnscas/cy": "file:.",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.0",
+    "@nestjs/platform-fastify": "^11.0.17",
+    "@nestjs/schedule": "^5.0.0",
     "axios": "^1.8.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "imap": "^0.8.19",
     "mongoose": "^8.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@nestjs/cli": "^11.0.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@types/jest": "^29.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
     "jest": "^29.5.0",
-    "prettier": "^3.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
