remove google client dev

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,19 @@
+# Environment Configuration
+NODE_ENV=development
+
+# Server Configuration
+SERVER_PORT=3000
+
 # Email Filter Configuration
 EMAIL_FROM=visa@notifications.visa.com
 EMAIL_SUBJECT=Transaction Alert
 
-# Telegram Bot Configuration
-BOT_TOKEN=your_bot_token_here 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=mock-client-id
+GOOGLE_CLIENT_SECRET=mock-client-secret
+GOOGLE_REDIRECT_URI=mock-redirect-uri
 
-# Server Configuration
-SERVER_PORT=3000
+
+# Telegram Bot Configuration
+BOT_TOKEN=your_bot_token_here
+API_URL=http://server:3000
