--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 
 # Server Configuration
 SERVER_PORT=3000
+SERVER_HOST=0.0.0.0
 
 # Email Filter Configuration
 EMAIL_FROM=visa@notifications.visa.com
