--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     command: sh -c "/wait && cd /app/server && npx ts-node-dev -r tsconfig-paths/register --inspect=0.0.0.0:1339 -P ./tsconfig.json src/main.ts"
     environment:
       - SERVER_PORT=3000
+      - SERVER_HOST=0.0.0.0
       - NODE_ENV
       - EMAIL_FROM=${EMAIL_FROM}
       - EMAIL_SUBJECT=${EMAIL_SUBJECT}
@@ -32,6 +33,7 @@ services:
       - mongodb
 
   bot:
+    platform: linux/amd64
     build:
       context: ./bot
       dockerfile: Dockerfile
