--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/main.js",
+  "main": "dist/src/main.js",
   "scripts": {
     "build": "nest build",
     "start": "nest start",
     "start:dev": "NODE_OPTIONS='--max-old-space-size=4096' nest start --watch",
     "start:debug": "NODE_OPTIONS='--max-old-space-size=4096' nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node ./src/main.js",
     "test": "jest --config ./test/jest.config.ts --detectOpenHandles"
   },
   "keywords": [],
