--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - GOOGLE_CLIENT_ID
       - GOOGLE_CLIENT_SECRET
       - GOOGLE_REDIRECT_URI
+      - ENCRYPTION_KEY
     ports:
       - "${SERVER_PORT:-3000}:3000"
       - '1339:1339'
