--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,5 @@ GOOGLE_REDIRECT_URI=mock-redirect-uri
 # Telegram Bot Configuration
 BOT_TOKEN=your_bot_token_here
 API_URL=http://server:3000
+
+ENCRYPTION_KEY=mock-encryption-key
