--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "lint": "eslint \"{server,bot}/**/*.ts\" --fix",
     "format": "prettier --write \"server/**/*.ts\" \"bot/**/*.ts\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "docker compose build",
+    "start": "docker compose up -d"
   },
   "repository": {
     "type": "git",
